--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -7,3 +7,9 @@ tasks:
     desc: "Generate code from proto files"
     cmds:
       - protoc -I protoss/proto protoss/proto/sso/sso.proto --go_out=protoss/gen/go --go_opt=paths=source_relative --go-grpc_out=protoss/gen/go/ --go-grpc_opt=paths=source_relative
+  migrations:
+    aliases:
+      - mig
+    desc: "Migrations"
+    cmds:
+      - go run ./sso/cmd/migrator --storage-path=./sso/storage/sso.db --migrations-path=./sso/migrations
