--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -13,3 +13,9 @@ tasks:
     desc: "Migrations"
     cmds:
       - go run ./sso/cmd/migrator --storage-path=./sso/storage/sso.db --migrations-path=./sso/migrations
+  test-migrations:
+    aliases:
+      - test-mig
+    desc: "Migrations for test"
+    cmds:
+      - go run ./sso/cmd/migrator --storage-path=./sso/storage/sso.db --migrations-path=./sso/tests/migrations --migrations-table=migrations_test
